fix style of button for smaller and medium screens for form so it is centered under the form and has more spacing

--- a/src/components/contact/contact.css
+++ b/src/components/contact/contact.css
@@ -71,6 +71,10 @@ label {
         grid-template-rows: 30% 58%;
         gap: 12%;
     }
+
+    button {
+        margin: 1.3rem auto 0;
+    }
 }
 
 /* Media Queries (Small Devices) */
